--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
            <!-- // CaRD-->
            <!-- CaRD-->
            <div class="card">
-            <a href="unit_project.html" class="card-link">
+            <a href="../unit_project.html" class="card-link">
                <img class="card-img" src="./img/portfolio/unit.jpg" alt="Многостраничный Сайт">
                <h3 class="card-title">Адаптивный лендинг</h3>
                <p>Верстка многостраничного сайта.</p>
