--- a/unit_project/unit_project.html
+++ b/unit_project/unit_project.html
@@ -257,7 +257,7 @@
                     <!-- SLIDER ITEM -->
                     <div class="slider-item">
                         <div class="slider-item__text">
-                            <p> Это потрясающее приложение которое помогло мне завершить все мои дела,<br> и сделать дипломный проект раньше срока. </p>
+                            <p> Это потрясающее приложение которое помогло мне завершить все мои дела, и сделать дипломный проект раньше срока. </p>
                         </div>
                         <div class="slider-item__author">
                             <div class="slider-item__avatar">
