--- a/forest_travel/index.html
+++ b/forest_travel/index.html
@@ -1,1 +1,40 @@
-
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.css">
+    <meta property="og:url" content="http://webcademy.ru/test/forest-travel/main.html">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Курс по Frontend">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="http://webcademy.ru/jscouse/img/opengraph.jpg">
+    <title>Содержание - проект Форест Тревел</title>
+    <meta name="description" content="Турпоходы по дикой природе от туристического агенства Форест Тревел в Москве">
+    <meta name="keywords" content="турпоходы, лес, природа, турагенство, Форест Тревел">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicons/site.webmanifest">
+    <link rel="mask-icon" href="./img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./img/favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#603cba">
+    <meta name="msapplication-config" content="./img/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">    
+</head>
+<body class="bgcolor">
+    <main class="ui">
+        <div class="container">
+            <h1 class="ui-header">Проект "Форест Тревел"</h1>
+            <p class="ui-header-2">Страницы:</p>
+            <ul class="ul-list">
+                <li><a target="_blank" href="main.html">Главная</a></li>
+                <li><a target="_blank" href="tours.html">Туры</a></li>
+                <li><a target="_blank" href="tracking.html">Статья. Трекинг походы</a></li>
+                <li><a target="_blank" href="contacts.html">Контакты</a></li>
+                <li><a target="_blank" href="404.html">Ошибка 404</a></li>
+            </ul>
+        </div>
+    </main>
+</body>
+</html>
