--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
            
            <!-- CaRD-->
            <div class="card">
-                <a href="#" class="card-link">
+                <a href="./forest_travel/main.html" class="card-link">
                <img class="card-img" src="./img/portfolio/forest.jpg" alt="Многостраничный Сайт">
                <h3 class="card-title">Многостраничный Сайт</h3>
                <p>Верстка многостраничного сайта.</p>
