--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
 		   
            <!-- CaRD-->
            <div class="card">
-            <a href="fores-tracel.html" class="card-link">
+            <a href="./personal_website/index.html" class="card-link">
                <img class="card-img" src="./img/portfolio/portfolio.jpg" alt="Многостраничный Сайт">
                <h3 class="card-title">Личный сайт </h3>
                <p>Верстка многостраничного сайта.</p>
                </a>
             </div>
            <!-- // CaRD-->
+		   
            <!-- CaRD-->
            <div class="card">
             <a href="fores-tracel.html" class="card-link">
