--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -160,6 +160,7 @@
                                     <li class="skils__item"> верстаю с сеткой или без</li>
                                     <li class="skils__item"> адаптивная верстка под мобильные устройства</li>
                                     <li class="skils__item"> оптимизация по retina экраны</li>
+                                    <li class="skils__item"> скрипты, плагины, формы обратной связи</li>
                                    
                                 </ul>                          
                             </div>
