--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -59,7 +59,7 @@
                         
                             <div>
                                     <div class="icons">
-                                        <a target="_blank" class="icon" href="https://t.me/@herbert0609">
+                                        <a target="_blank" class="icon" href="https://t.me/herbert0609">
                                             <img src="./img/icons/telegram.svg" alt="telegram.svg">
                                         </a>
                                         <a target="_blank" class="icon" href="https://vk.com/id232464684">
@@ -170,7 +170,7 @@
                                 <p class="subtitle">На связи:</p>
                             </div>
                             <div class="icons">
-                                <a target="_blank" class="icon" href="https://t.me/@herbert0609">
+                                <a target="_blank" class="icon" href="https://t.me/herbert0609">
                                     <img src="./img/icons/telegram.svg" alt="telegram.svg">
                                 </a>
                                 <a target="_blank" class="icon" href="https://vk.com/id232464684">
@@ -336,7 +336,7 @@
                             </ul>
                         </div>
                         <div class="icons">
-                            <a target="_blank" class="icon" href="https://t.me/@herbert0609">
+                            <a target="_blank" class="icon" href="https://t.me/herbert0609">
                                 <img src="./img/icons/telegram.svg" alt="telegram.svg">
                             </a>
                             <a target="_blank" class="icon" href="https://vk.com/id232464684">
