--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -212,7 +212,7 @@
 
                     <div class="portfolio__cards">
                         
-                        <a target="_blank" class="card-project font-syle"  href="/forest_travel-mb/main.html">
+                        <a target="_blank" class="card-project font-syle"  href="../forest_travel/main.html">
 
                                 <div class="card-project__img-block">
                                     <img  
@@ -225,7 +225,7 @@
                                     <p class="card-project__text">Верстка многостраничного сайта </p>
                                 </div>
                         </a>
-                        <a target="_blank" class="card-project font-syle"  href="/unit_project/index.html">      
+                        <a target="_blank" class="card-project font-syle"  href="../personal_website/index.html">      
 
                             <div class="card-project__img-block">
                                 <img 
