--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -225,7 +225,7 @@
                                     <p class="card-project__text">Верстка многостраничного сайта </p>
                                 </div>
                         </a>
-                        <a target="_blank" class="card-project font-syle"  href="../personal_website/index.html">      
+                        <a target="_blank" class="card-project font-syle"  href="../unit_project/unit_project.html">      
 
                             <div class="card-project__img-block">
                                 <img 
